fixes highlight color in dark mode

--- a/public/theme.css
+++ b/public/theme.css
@@ -15,6 +15,7 @@
 		--background-color-ui-primary: #fff;
 		--background-color-ui-secondary: #fff;
 		--background-color-ui-inverse: #444;
+		--background-color-ui-highlight: #de005360;
 		--border-color-ui-primary: gray;
 		--border-color-ui-secondary: lightgray;
 	}
@@ -30,6 +31,7 @@
 		--background-color-ui-primary: #222;
 		--background-color-ui-secondary: #333;
 		--background-color-ui-inverse: #eee;
+		--background-color-ui-highlight: #f8cb0060;
 		--border-color-ui-primary: #aaa;
 		--border-color-ui-secondary: #888;
 	}
@@ -44,6 +46,7 @@ body.color-scheme-light {
 	--background-color-ui-primary: #fff;
 	--background-color-ui-secondary: #fff;
 	--background-color-ui-inverse: #444;
+	--background-color-ui-highlight: #de005360;
 	--border-color-ui-primary: gray;
 	--border-color-ui-secondary: lightgray;
 }
@@ -52,12 +55,12 @@ body.color-scheme-dark {
 	--color-text: #eee;
 	--color-text-soft: #aaa;
 	--color-text-inverse: #000;
-
 	--color-highlight: #f8cb00;
 	--color-link: #81b3ff;
 	--background-color-ui-primary: #222;
 	--background-color-ui-secondary: #333;
 	--background-color-ui-inverse: #eee;
+	--background-color-ui-highlight: #f8cb0060;
 	--border-color-ui-primary: #aaa;
 	--border-color-ui-secondary: #888;
 }
